--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <main>
         <div class="big-wrapper light">
-            <img src="./img/shape.png" alt="" class="shape" />
+            <img src="./img/GeometricShapes.png" alt="" class="shape" />
 
             <header>
                 <div class="container">
                     <div class="logo">
-                        <img src="./img/logo.png" alt="Logo" />
-                        <h3>LandingPage</h3>
+                        <img src="./img/logoSite.png" alt="Logo" />
+                        <h3>BusinessTech</h3>
                     </div>
 
                     <div class="links">
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="right">
-                        <img src="./img/person.png" alt="Person Image" class="person" />
+                        <img src="./img/Geometric.png" alt="Person Image" class="person" />
                     </div>
                 </div>
             </div>
@@ -69,8 +69,6 @@
             </div>
         </div>
     </main>
-
-    <!-- JavaScript Files -->
 
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <script src="./app.js"></script>
