--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
                     <div class="links">
                         <ul>
-                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Tools</a></li>
+                            <li><a href="#">Demos</a></li>
                             <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Testimonials</a></li>
                             <li><a href="#" class="btn">Sign up</a></li>
                         </ul>
                     </div>
@@ -42,11 +42,11 @@
                 <div class="container">
                     <div class="left">
                         <div class="big-title">
-                            <h1>Future is here,</h1>
-                            <h1>Start Exploring now.</h1>
+                            <h1>The future of your business</h1>
+                            <h1>is in technology.</h1>
                         </div>
                         <p class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eius distinctio odit, magni magnam qui ex perferendis vitae!
+                            build your ecommerce, landing pages, websites, systems and transform your business!
                         </p>
                         <div class="cta">
                             <a href="#" class="btn">Get started</a>
